fix "jumping" star issue on some devices

--- a/FrontEnd/src/components/profileList/ProfileCard.module.css
+++ b/FrontEnd/src/components/profileList/ProfileCard.module.css
@@ -128,10 +128,10 @@
   gap: 8px;
 }
 
-.icon-container {
+.bell-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
+  width: 30px;
   height: 100%;
 }
